implement requestAnimationFrame for animation interval, implement custom head, configurable with 'user image'.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       <div class="position-absolute moon z-index-0 top-0">&#9789;</div>
       <div class="position-absolute transition-left-1s player-start z-index-1" id="player">
         <div class="wh-100 position-relative">
+          <div id="head" class="position-absolute d-none">
+            <img class="h-auto w-36 h-53" src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" />
+            <div class="eyes-dead position-absolute top-12 visible-hide left-4">x</div>
+            <div class="eyes-dead position-absolute top-12 visible-hide left-22">x</div>
+          </div> 
           <div id="foot-back" class="position-absolute wh-10 left-0"></div>
           <div id="foot-front" class="position-absolute wh-10 right-0"></div>
         </div>
