--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
       </h1>
       <button class="border-radius-4 cursor-pointer" id="play">play</button>
     </div>
-    <script src="script.js"></script>
+    <script src="script.js?v01"></script>
   </body>
 </html>
