--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
             <div class="eyes-dead position-absolute top-12 visible-hide left-4">x</div>
             <div class="eyes-dead position-absolute top-12 visible-hide left-22">x</div>
           </div> 
-          <div id="foot-back" class="position-absolute wh-10 left-0"></div>
-          <div id="foot-front" class="position-absolute wh-10 right-0"></div>
+          <div id="foot-back" class="position-absolute wh-5-6 left-0"></div>
+          <div id="foot-front" class="position-absolute wh-5-6 right-0"></div>
         </div>
       </div>
       <div class="position-absolute" id="score"></div>
       <div class="position-absolute" id="level"></div>
-      <div class="position-absolute bottom-0" id="floor"></div>
-      <div class="position-absolute" id="back"></div>
-    </div>
-    <div id="game-over" class="position-absolute flex-column-center d-none">
-      <h1 class="mt-0 mb-05">
-        <span class="font-brush-script-mt ">Game Over</span>
-      </h1>
-      <button class="border-radius-4 cursor-pointer" id="play">play</button>
+      <div class="position-absolute bottom-0 left-0 right-0" id="floor"></div>
+      <div class="position-absolute left-0 right-0"" id="back"></div>
+      <div id="game-over" class="position-absolute flex-column-center d-none top-0 right-0 bottom-0 left-0 z-index-2">
+        <h1 class="mt-0 mb-05">
+          <span class="font-brush-script-mt ">Game Over</span>
+        </h1>
+        <button class="border-radius-4 cursor-pointer" id="play">play</button>
+      </div>
     </div>
     <script src="script.js?v01"></script>
   </body>
