--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
           <div id="foot-front" class="position-absolute wh-5-6 right-0"></div>
         </div>
       </div>
-      <div class="position-absolute" id="score"></div>
-      <div class="position-absolute" id="level"></div>
+      <div class="position-absolute lt-05" id="score"></div>
+      <div class="position-absolute rt-05" id="level"></div>
       <div class="position-absolute bottom-0 left-0 right-0" id="floor"></div>
       <div class="position-absolute left-0 right-0"" id="back"></div>
       <div id="game-over" class="position-absolute flex-column-center d-none top-0 right-0 bottom-0 left-0 z-index-2">
