--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body class="d-flex flex-column-center m-0 p-0 pt-1">
     <div id="board" class="position-relative overflow-hidden margin-auto border-radius-4">
       <div class="position-absolute moon z-index-0 top-0">&#9789;</div>
-      <div class="position-absolute z-index-1" id="player">
+      <div class="position-absolute z-index-1 initial" id="player">
         <div class="wh-100 position-relative">
           <div id="head" class="position-absolute d-none">
             <img class="h-auto w-36 h-53" src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" />
@@ -21,7 +21,7 @@
         </div>
       </div>
       <div class="position-absolute lt-05" id="score"></div>
-      <div class="position-absolute rt-05" id="level"></div>
+      <div class="position-absolute rt-05 level" id="level-container">Level <span class="level" id="level"></span></div>
       <div class="position-absolute bottom-0 left-0 right-0" id="floor"></div>
       <div class="position-absolute left-0 right-0" id="back"></div>
       <div id="game-over" class="position-absolute flex-column-center d-none top-0 right-0 bottom-0 left-0 z-index-2">
